--- a/sim/Makefile
+++ b/sim/Makefile
@@ -1,93 +1,140 @@
-# Variables
-IVERILOG = iverilog
-VVP = vvp
-SURFER = surfer
-SIM_DIR = sim
-OUTPUT = cordic
-VCD_FILE = cordic_wave.vcd
-TEXT_OUTPUT = tb_cordic.txt
-RTL_DIR = ../rtl
-DV_DIR = ../dv
-FILELIST = rtl_files.f
+# =======================================================================
+# FFT Project Makefile
+# Description: Automated Build and Simulation Environment
+# Support: Multiple testbench modules via 'MODULE' variable
+# =======================================================================
 
-# ==== SỬA LỖI TẠI ĐÂY ====
-# Tên thư mục là "scripts" (số nhiều), không phải "script"
-SCRIPT_DIR = ../scripts
+# Toolchain Variables
+IVERILOG    = iverilog
+VVP         = vvp
+SURFER      = surfer
+PYTHON_CMD  = python3
 
-# Python verification variables
-PYTHON_CMD = python3
-# Trỏ đúng vào file
-PYTHON_SCRIPT = $(SCRIPT_DIR)/check_cordic.py
-CHECK_OUTPUT = tb_cordic_check.txt
+# Directory Path Variables
+RTL_DIR     = ../rtl
+DV_DIR      = ../dv
+SIM_DIR     = ./sim_build
+SCRIPT_DIR  = ../scripts
 
-# Testbench file
-DV_SOURCES = $(DV_DIR)/tb_cordic.sv
-DV_FILE = tb_cordic
+# Module Selection (Default: cordic)
+# Usage: make [target] MODULE=reordering
+MODULE ?= cordic
 
-# Default target
+# File and Target Definitions based on selected MODULE
+OUTPUT_BIN   = $(MODULE)_sim
+VCD_FILE     = $(MODULE)_wave.vcd
+# Sửa đổi tại đây để dump ra file txt theo tên module
+LOG_FILE     = output_$(MODULE).txt
+FILELIST     = rtl_files.f
+
+# Testbench Sources
+DV_SOURCES   = $(DV_DIR)/tb_$(MODULE).sv
+DV_TOP_FILE  = tb_$(MODULE)
+
+# Python Verification Variables
+PYTHON_SCRIPT = $(SCRIPT_DIR)/check_$(MODULE).py
+CHECK_REPORT  = tb_$(MODULE)_check.txt
+
+# --- Default Target ---
 all: create_filelist build run
 
-# Build, run and create wave
-all_wave: create_filelist build run wave
-
 # ---------------------------------------------------------
-# Create file list target
+# Target: create_filelist
+# Generates a list of all .sv files in the RTL directory
 # ---------------------------------------------------------
 create_filelist:
 	@echo "------------------------------------------------"
-	@echo "Searching for .sv files in $(RTL_DIR)..."
+	@echo " Generating file list from $(RTL_DIR)..."
 	@echo "------------------------------------------------"
-	@find $(RTL_DIR) -name "*.sv" | sort | tee $(FILELIST)
+	@find $(RTL_DIR) -name "*.sv" | sort > $(FILELIST)
+	@echo " File list saved to: $(FILELIST)"
+
+# ---------------------------------------------------------
+# Target: build
+# Compiles the RTL and Testbench using Icarus Verilog
+# ---------------------------------------------------------
+build: create_filelist
 	@echo "------------------------------------------------"
-	@echo "File list generated at: $(FILELIST)"
+	@echo " Compiling Module: $(MODULE)"
 	@echo "------------------------------------------------"
+	$(IVERILOG) -o $(OUTPUT_BIN) -c $(FILELIST) $(DV_SOURCES) -s $(DV_TOP_FILE) -g2005-sv
 
-# Build target
-build: $(OUTPUT)
-
-# Rule to compile the Verilog sources
-$(OUTPUT): $(DV_SOURCES)
-	@if [ ! -f $(FILELIST) ]; then \
-		echo "File list not found. Running create_filelist..."; \
-		make create_filelist; \
-	fi
-	$(IVERILOG) -o $@ -c $(FILELIST) $(DV_SOURCES) -s $(DV_FILE) -g2012
-
-# Run target
+# ---------------------------------------------------------
+# Target: run
+# Executes the simulation and pipes output to a log file
+# ---------------------------------------------------------
 run: build
-	$(VVP) $(OUTPUT) | tee $(TEXT_OUTPUT)
+	@echo "------------------------------------------------"
+	@echo " Running Simulation..."
+	@echo "------------------------------------------------"
+	$(VVP) $(OUTPUT_BIN) | tee $(LOG_FILE)
 
 # ---------------------------------------------------------
-# Simulation + Python Verification Target
+# Target: verify
+# Runs Python script to validate simulation results
 # ---------------------------------------------------------
-sim_python: run
-	@echo "------------------------------------------------"
-	@echo "Running Python Verification..."
-	@echo "Script location: $(PYTHON_SCRIPT)"
-	@echo "Input Log file : $(TEXT_OUTPUT)"
-	@echo "Writing check result to: $(CHECK_OUTPUT)"
-	@echo "------------------------------------------------"
-	# Truyền $(TEXT_OUTPUT) vào làm tham số
-	$(PYTHON_CMD) $(PYTHON_SCRIPT) $(TEXT_OUTPUT) > $(CHECK_OUTPUT)
-	@echo "Verification Complete!"
-	@echo "Results saved in $(CHECK_OUTPUT)"
-	@echo "------------------------------------------------"
-	@cat $(CHECK_OUTPUT)
+verify: run
+	@if [ -f $(PYTHON_SCRIPT) ]; then \
+		echo "------------------------------------------------"; \
+		echo " Running Python Verification..."; \
+		$(PYTHON_CMD) $(PYTHON_SCRIPT) $(LOG_FILE) > $(CHECK_REPORT); \
+		echo " Report saved to: $(CHECK_REPORT)"; \
+		echo "------------------------------------------------"; \
+		cat $(CHECK_REPORT); \
+	else \
+		echo " [!] No python script found for $(MODULE) at $(PYTHON_SCRIPT)"; \
+	fi
 
-# Wave target
-wave: 
-	$(SURFER) $(VCD_FILE)
+# ---------------------------------------------------------
+# Target: wave
+# Opens the generated VCD file in Surfer/GTKWave
+# ---------------------------------------------------------
+wave:
+	@if [ -f $(VCD_FILE) ]; then \
+		$(SURFER) $(VCD_FILE); \
+	else \
+		echo " [!] VCD file not found. Run simulation first."; \
+	fi
 
-# Clean up
+# ---------------------------------------------------------
+# Target: clean
+# Removes ALL generated artifacts, logs, wave files, and executables
+# ---------------------------------------------------------
 clean:
-	rm -f $(OUTPUT) $(VCD_FILE) $(TEXT_OUTPUT) $(FILELIST) $(CHECK_OUTPUT)
+	@echo "------------------------------------------------"
+	@echo " Cleaning up all simulation artifacts..."
+	@echo "------------------------------------------------"
+	rm -f *_sim
+	rm -f *.vcd
+	rm -f *.log *.txt
+	rm -f *.f
+	@echo " Clean completed."
 
-# Help
+# ---------------------------------------------------------
+# Target: help (Giữ nguyên như cũ)
+# Displays usage instructions
+# ---------------------------------------------------------
 help:
-	@echo " make create_filelist : Find .sv files, PRINT them, and save to $(FILELIST)"
-	@echo " make build           : Compile the design"
-	@echo " make run             : Run simulation and save log to $(TEXT_OUTPUT)"
-	@echo " make sim_python      : Run sim, verify with Python using $(PYTHON_SCRIPT)"
-	@echo " make wave            : Open waveform"
-	@echo " make all             : Update list, build, and run"
-	@echo " make clean           : Remove simulation and log files"
+	@echo "======================================================================="
+	@echo "                       FFT PROJECT MAKEFILE HELP                       "
+	@echo "======================================================================="
+	@echo " Usage: make [TARGET] MODULE=[module_name]"
+	@echo ""
+	@echo " Main Targets:"
+	@echo "  all       : Generate filelist, compile, and run (Default)"
+	@echo "  build     : Compile the selected module only"
+	@echo "  run       : Run simulation and save output to .log"
+	@echo "  verify    : Run simulation and verify with Python script"
+	@echo "  wave      : Open waveform viewer"
+	@echo "  clean     : Remove all temporary and generated files"
+	@echo ""
+	@echo " Available Modules Examples:"
+	@echo "  cordic, reordering, stage1, stage2..."
+	@echo ""
+	@echo " Examples:"
+	@echo "  make all MODULE=reordering"
+	@echo "  make verify MODULE=cordic"
+	@echo "  make wave MODULE=reordering"
+	@echo "======================================================================="
+
+.PHONY: all build run verify wave clean help create_filelist
